tests/snapshots/parse_standard__snapshot_aggregation_with_args.snap
---
source: tests/parse_standard.rs
assertion_line: 85
expression: ast
---
Standard:
  selections:
    - Aggregation:
        function: Percentile
        args:
          - Field: duration
          - Literal:
              Integer: 95
  data_source: Logs
  scope: ~
  conditions: ~
  facet: ~
  time_range: ~
  time_basis: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
  timeseries: ~
  enrichments: []
  during: ~
