tests/snapshots/parse_standard__snapshot_basic_select.snap
---
source: tests/parse_standard.rs
expression: ast
---
Standard:
  selections:
    - Field: span_name
    - Field: duration
  data_source: Logs
  robot_scope: ~
  conditions: ~
  facet: ~
  time_range: ~
  time_basis: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
