tests/snapshots/parse_standard__snapshot_between_timestamps.snap
---
source: tests/parse_standard.rs
expression: ast
---
Standard:
  selections:
    - Star
  data_source: Logs
  robot_scope: ~
  conditions: ~
  facet: ~
  time_range:
    Between:
      start:
        Absolute: "2026-03-18T14:00:00Z"
      end:
        Absolute: "2026-03-18T15:00:00Z"
  time_basis: ~
  order_by: ~
  limit: ~
  output_format: ~
  baseline: ~
