tests/snapshots/parse_standard__snapshot_bracket_access.snap
---
source: tests/parse_standard.rs
expression: ast
---
Standard:
  selections:
    - Star
  data_source: Logs
  scope: ~
  conditions:
    Comparison:
      left:
        FieldAccess:
          base: fields
          key: my_value
      op: Gt
      right:
        Literal:
          Integer: 42
  facet: ~
  time_range: ~
  time_basis: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
