tests/snapshots/parse_standard__snapshot_enrich_with_limit.snap
---
source: tests/parse_standard.rs
assertion_line: 157
expression: ast
---
Standard:
  selections:
    - Star
  data_source: Traces
  scope: ~
  conditions:
    Comparison:
      left:
        Field: status
      op: Eq
      right:
        Literal:
          String: ERROR
  facet: ~
  time_range:
    Since:
      Relative:
        amount: 1
        unit: hour
  time_basis: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
  timeseries: ~
  enrichments:
    - source: Logs
      join_key: ~
      limit: 200
      sample_full: false
  during: ~
