tests/snapshots/parse_standard__snapshot_enrich_with_sample_full.snap
---
source: tests/parse_standard.rs
assertion_line: 163
expression: ast
---
Standard:
  selections:
    - Star
  data_source: Traces
  scope: ~
  conditions: ~
  facet: ~
  time_range:
    Since:
      Relative:
        amount: 1
        unit: hour
  time_basis: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
  timeseries: ~
  enrichments:
    - source:
        TopicAlias: JointStates
      join_key: ~
      limit: ~
      sample_full: true
  during: ~
