tests/snapshots/parse_standard__snapshot_for_session.snap
---
source: tests/parse_standard.rs
assertion_line: 114
expression: ast
---
Standard:
  selections:
    - Star
  data_source: Traces
  scope:
    robot: ~
    version: ~
    environment: ~
    session: sess_abc123
  conditions: ~
  facet: ~
  time_range:
    Since:
      Relative:
        amount: 30
        unit: minutes
  time_basis: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
  timeseries: ~
  enrichments: []
  during: ~
